Fix view header title font weight and truncate when long

--- a/public/sass/_components.pxh-view.scss
+++ b/public/sass/_components.pxh-view.scss
@@ -120,9 +120,12 @@ $pxh-view-header-height: 61px !default; // locked to current height of px-contex
 }
 
 .pxh-view-header__title {
+  font-weight: normal;
   margin: 0;
   padding: 0;
-  font-weight: normal;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   padding-top: $inuit-base-spacing-unit;
   text-align: center;
   font-size: $inuit-base-font-size * 1.5;
